# nikopoke

./: .gitignore  Pokemon Battle Spec.md  battle-implementation-audit-2026-03-04.md  check_moves.js  frontend_draft.md  game_match.md
engine-rust/: Cargo.toml  README.md  create-dist.sh
engine-rust/data/: learnsets.json  learnsets.yaml  move_hybrid_report.json  move_id_migration_report.json  move_import_report.json  moves.json  moves.yaml  moves_old.json  moves_old.yaml  species.json  species.yaml
engine-rust/nikopoke-cli-dist/: README.md  battle-cli  debug-cli
engine-rust/nikopoke-cli-dist/data/: 2期生男子種族値 - 技一覧.csv  learnsets.json  moves.json
engine-rust/pkg/: engine_rust.d.ts  engine_rust.js  engine_rust_bg.wasm  engine_rust_bg.wasm.d.ts  package.json
engine-rust/src/: lib.rs  wasm.rs
engine-rust/src/ai/: eval.rs  mcts.rs  minimax.rs  mod.rs  simple.rs
engine-rust/src/core/: abilities.rs  battle.rs  effects.rs  events.rs  factory.rs  mod.rs  replay.rs  state.rs  statuses.rs  utils.rs
engine-rust/src/data/: learnsets.rs  mod.rs  moves.rs  (+2 more)
engine-rust/tests/: P0_P2_TEST_CASES.md  abilities.rs  bypass.rs  choice.rs  effects.rs  experiment.rs  experiment_abilities.rs  factory.rs  harness_smoke.rs  issue_fixes.rs  load_moves.rs  mechanics.rs  move_behavior_samples.rs  move_description_dsl_consistency.rs  move_description_samples.rs  random_move.rs  spec_priority_cases.rs  substitute.rs
engine-rust/tools/: export_learnsets_json.js  export_moves_json.js  export_species_json.js  generate_learnsets.js  hybrid_move_yaml_generator.py  verify_learnsets.js
(+1056 files in other folders)
