[package]
name = "engine-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine_rust"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
once_cell = "1.20"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
