[package]
name = "engine-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine_rust"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "battle-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "move-generator"
path = "src/bin/move_generator.rs"

[[bin]]
name = "debug-cli"
path = "src/bin/cli_test.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inquire = "0.7"
wana_kana = "3.0"

# For move generator (non-wasm only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3"
dotenv = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
once_cell = "1.20"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
